add sample works

--- a/sample-works.html
+++ b/sample-works.html
@@ -80,7 +80,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-9 mb-lg-0 text-center text-lg-start">
                             <h1 style="font-size: 100px; color: #ffff;">Sample</h1>
-                            <p class="lead fw-normal text-muted mb-5">fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?</p>
+                            <p class="lead fw-normal text-muted mb-5">The survivor series and kirten regalado Collection are two of our most recent clients. you will find our competence with details of service we provide to out clients</p>
                            
                         </div>
                     </div>
