--- a/what-we-do.html
+++ b/what-we-do.html
@@ -58,8 +58,8 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-9 mb-lg-0 text-center text-lg-start">
                             <h1 style="font-size: 100px; color: #ffff;">What we do</h1>
-                            <p class="lead fw-normal text-muted mb-5">fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?</p>
-                            <p class="lead fw-normal text-muted mb-5">,Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quaerat harum distinctio fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?,Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quaerat harum distinctio fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quaerat harum distinctio fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?</p>
+                            <p class="lead fw-normal text-muted mb-5">Ever wonder what is lacking with your business why it's not picking up?</p>
+                            <p class="lead fw-normal text-muted mb-5">Maybe your lacking in effective approach or doing it over top. What we need is an OK solution. we specialize in Digital marketing and Branding management, Icluding web and mobile application development, that surely reach target markets and beyond. we make sure that your brand and business presence will make a mark both in the physical market and digital arena. </p>
                         </div>
                     </div>
                     <div class="col-lg-5">
