--- a/contact-us.html
+++ b/contact-us.html
@@ -65,7 +65,7 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-9 mb-lg-0 text-center text-lg-start">
                             <h1 style="font-size: 100px; color: #ffff;">Contact Us</h1>
-                            <p class="lead fw-normal text-muted mb-5" style="font-weight: bold;"><strong> fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?</strong></p>
+                            <p class="lead fw-normal text-muted mb-5" style="font-weight: bold;"><strong> For inquiries and quotes, you can reach us throught info@https://www.oneknowledgeconsulting.com </strong></p>
                             <p class="lead fw-normal text-muted mb-5" style="font-size: 50px; color: #ffff;">Phone:</p>
                             <p class="lead fw-normal text-muted mb-5"style="font-size: 50px; color: #ffff;">Email:</p>
                         </div>
