--- a/who-we-are.html
+++ b/who-we-are.html
@@ -214,8 +214,12 @@ a.socialIcon:hover,
                         <!-- Mashead text and app badges-->
                         <div class="mb-9 mb-lg-0 text-center text-lg-start">
                             <p style="font-size: 100px; color: #ffff; font-weight: 900">Who we are</p>
-                            <p class="lead fw-normal text-muted mb-5">fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?</p>
-                            <p class="lead fw-normal text-muted mb-5">,Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quaerat harum distinctio fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?,Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quaerat harum distinctio fuga voluptates non eos nesciunt. Porro, quasi. Iste sed dicta non sequi vitae saepe, error dolor fugit rerum?Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis quaerat harum distinctio fuga voluptates non eos nesciunt.</p>
+                           
+                            <p class="lead fw-normal text-muted mb-5">We thrive providing excellence in service that industries rightfully deserve. We are one knowledge Consulting, LLC -
+                                specializing in degital creation and marketing, and platform development. our goal is to help small to medium entereprise to corporations get the attention they deserve. we believe that each business has different  needs when it comes to marketing services. Hence, we put 
+                                importance to the specificaation of service that each client needs. It's one of our strategies to success. Our methods are uniques and exciting with results that exceed expectations.
+                                </p>
+                                <p class="lead fw-normal text-muted mb-5">With us, you can always relax. Beacuse #It's ok</p>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -236,11 +240,11 @@ a.socialIcon:hover,
                             <!-- Mashead text and app badges-->
                             <div class="mb-9 mb-lg-0 text-center text-lg-start">
                                 <p style="font-size: 70px; color: #efc649; font-weight: 900;">Our Mission</p>
-                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam quibusdam beatae veniam,</p>
+                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">To help small and medium-sized enterprises grow by enabling their presence in the digital space</p>
                             </div>
                             <div class="mb-9 mb-lg-0 text-center text-lg-start">
                                 <p style="font-size: 70px; color: #efc649; font-weight: 900;">Our Vission</p>
-                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam quibusdam beatae veniam,</p>
+                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">To be forfront in providing digital solution to small and medium-sized business and make a different in the local and global economy</p>
                             </div>
                         </div>
                         <div class="col-lg-1">
