--- a/what-we-do.html
+++ b/what-we-do.html
@@ -18,7 +18,7 @@
         <link href="css/styles.css" rel="stylesheet" />
         <style>
             #mainNav {
-               background-color: #da5c68de;
+               background-color: #ff8177;
             }
             .masthead {
                 background-color: #d45455;
