--- a/sample-works.html
+++ b/sample-works.html
@@ -44,6 +44,8 @@
             }
             .masthead {
                 background-color: #c31d70;
+                padding-top: 16.5rem;
+                padding-bottom: 2rem;
             }
         </style>
     </head>
@@ -88,7 +90,7 @@
                         <!-- Masthead device mockup feature-->
                         <div class="masthead-device-mockup">
 
-                            <img src="assets/img/folder.png" alt="" srcset="" height="400">
+                            <img src="assets/img/folder.png" alt="" srcset="" height="400" class="img-fluid">
                         </div>
                     </div>
                 </div>
