--- a/what-we-do.html
+++ b/what-we-do.html
@@ -22,7 +22,12 @@
             }
             .masthead {
                 background-color: #d45455;
+                padding-top: 16.5rem;
+                padding-bottom: 6rem;
             }
+            .app-badge {
+                height: 10rem;
+                }
         </style>
     </head>
     <body id="page-top">
@@ -66,7 +71,7 @@
                         <!-- Masthead device mockup feature-->
                         <div class="masthead-device-mockup">
 
-                            <img src="assets/img/sticky_note_PNG18967.png" alt="" srcset="" height="400">
+                            <img src="assets/img/sticky_note_PNG18967.png" alt="" srcset="" height="400"  class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -94,7 +99,7 @@
                             <!-- Masthead device mockup feature-->
                             <div class="masthead-device-mockup">
     
-                                <img src="assets/img/radio_PNG91647.png" alt="" srcset="" height="400">
+                                <img src="assets/img/radio_PNG91647.png" alt="" srcset="" height="400" class="img-fluid">
                             </div>
                         </div>
                     </div>
