--- a/who-we-are.html
+++ b/who-we-are.html
@@ -22,10 +22,8 @@
             }
             .masthead {
                 background-color: #d39f03;
-            }
-            .masthead {
-
-                padding-bottom: 0rem;
+                padding-top: 16.5rem;
+                padding-bottom: 2rem;
             }
             aside, section {
                 padding-top: 0rem;
@@ -224,9 +222,9 @@ a.socialIcon:hover,
                     </div>
                     <div class="col-lg-5">
                         <!-- Masthead device mockup feature-->
-                        <div class="masthead-device-mockup" style="position: absolute; buttom:100px">
+                        <div class="masthead-device-mockup">
                             
-                            <img src="assets/img/glasses_PNG54348.png" alt="" srcset="" height="250">
+                            <img src="assets/img/glasses_PNG54348.png" alt="" srcset="" height="250" class="img-fluid">
                         </div>
                     </div>
                 </div>
@@ -253,7 +251,7 @@ a.socialIcon:hover,
                             <!-- Masthead device mockup feature-->
                             <div class="masthead-device-mockup">
     
-                                <img src="assets/img/toppng.com-three-darts-on-a-dartsboard-803x769.png" alt="" srcset="" height="600">
+                                <img src="assets/img/toppng.com-three-darts-on-a-dartsboard-803x769.png" alt="" srcset="" height="600" class="img-fluid">
                             </div>
                         </div>
                     </div>
