--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <style>
+            #mainNav {
+               background-color: #fb8833;
+            }
+            .masthead {
+                background-color: #f79851;
+                padding-top: 16.5rem;
+                padding-bottom: 12rem;
+            }
+        </style>
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -42,28 +52,25 @@
                 </div>
             </div>
         </nav>
-        <!-- Mashead header-->
         <header class="masthead">
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
-                    <div class="col-lg-9">
+                    <div class="col-lg-7">
                         <!-- Mashead text and app badges-->
-                        <div class="mb-9 mb-lg-0 text-center text-lg-start">
-                            <h1 style="font-size: 100px; color: #ffff;">Business problem?  It's OK!</h1>
+                        <div class="mb-5 mb-lg-0 text-center text-lg-start">
+                            <h1 class="display-1 lh-1 mb-3"style="color: #ffff;" >Business problem?  It's OK!</h1>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
-                               <button class="btn btn-outline-light" style="padding: 20px;border-radius: 37px; padding: 15px 100px;">
-                                CALL US
-                               </button>
+                                <button class="btn btn-outline-light" style="padding: 20px;border-radius: 37px; padding: 15px 100px;">
+                                    CALL US
+                                   </button>
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-3">
-                        <br><br><br><br><br><br><br><br><br>
-
+                    <div class="col-lg-5">
+                        <br>
                         <!-- Masthead device mockup feature-->
                         <div class="masthead-device-mockup">
-
-                            <img src="assets/img/Desktop.png" alt="" srcset="" height="400">
+                            <img src="assets/img/Desktop.png" alt="" srcset="" class="img-fluid">
                         </div>
                     </div>
                 </div>
