--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="what-we-do.html">WHAT WE DO</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="./what-we-do">WHAT WE DO</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="who-we-are.html">WHO WE ARE</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="sample-works.html">SAMPLE WORKS</a></li>
                         <li class="nav-item"><a class="nav-link me-lg-3" href="contact-us.html">CONTACT US</a></li>
