--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto me-4 my-3 my-lg-0">
                         <li class="nav-item"><a class="nav-link me-lg-3" href="./what-we-do">WHAT WE DO</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="who-we-are.html">WHO WE ARE</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="sample-works.html">SAMPLE WORKS</a></li>
-                        <li class="nav-item"><a class="nav-link me-lg-3" href="contact-us.html">CONTACT US</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="./who-we-are">WHO WE ARE</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="./sample-works">SAMPLE WORKS</a></li>
+                        <li class="nav-item"><a class="nav-link me-lg-3" href="./contact-us">CONTACT US</a></li>
                     </ul>
                     <!-- <button class="btn btn-primary rounded-pill px-3 mb-2 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
                         <span class="d-flex align-items-center">
