--- a/what-we-do.html
+++ b/what-we-do.html
@@ -34,7 +34,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top shadow-sm" id="mainNav">
             <div class="container px-5">
-                <a class="navbar-brand fw-bold" href="index.html"><img src="assets/img/ok_logo_transparent.png" height="90" alt="" srcset=""></a>
+                <a class="navbar-brand fw-bold" href="./index"><img src="assets/img/ok_logo_transparent.png" height="90" alt="" srcset=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="bi-list"></i>
