--- a/sample-works.html
+++ b/sample-works.html
@@ -44,7 +44,7 @@
             }
             .masthead {
                 background-color: #c31d70;
-                padding-top: 16.5rem;
+                padding-top: 10.5rem;
                 padding-bottom: 2rem;
             }
         </style>
@@ -96,6 +96,11 @@
                 </div>
             </div>
         </header>
+        <div style="padding: 30px; color:pink; border-top: 10px solid; margin-left: 10rem; margin-right: 10rem;">
+            <div class="align-items-center">
+                <hr class="">
+            </div>
+        </div>
         <section>
             <div class="container px-5">
                 <div class="row gx-5 align-items-center">
@@ -127,9 +132,12 @@
                           </div>
                     </div>
                 </div>
-                
-               
             </div>
+        <div style="padding: 30px; color:pink; border-top: 10px solid; margin-left: 10rem; margin-right: 10rem;">
+            <div class="align-items-center">
+                <hr class="">
+            </div>
+        </div>
         </section>
         <!-- Feedback Modal-->
         <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
