--- a/what-we-do.html
+++ b/what-we-do.html
@@ -63,8 +63,9 @@
                         <!-- Mashead text and app badges-->
                         <div class="mb-9 mb-lg-0 text-center text-lg-start">
                             <h1 style="font-size: 100px; color: #ffff;">What we do</h1>
-                            <p class="lead fw-normal text-muted mb-5">Ever wonder what is lacking with your business why it's not picking up?</p>
-                            <p class="lead fw-normal text-muted mb-5">Maybe your lacking in effective approach or doing it over top. What we need is an OK solution. we specialize in Digital marketing and Branding management, Icluding web and mobile application development, that surely reach target markets and beyond. we make sure that your brand and business presence will make a mark both in the physical market and digital arena. </p>
+                            <p class="lead fw-normal text-muted mb-5">Ever wonder what is lacking with your business why it’s not picking up?</p>
+                            <p class="lead fw-normal text-muted mb-5">Maybe you’re lacking an effective approach or doing it over the top. What you need is an OK solution.  We specialize in digital marketing and branding management, including web and mobile application development, that surely reach target markets and beyond. We make sure that your brand and business presence will make a mark both in the physical market and digital arena.
+                            </p>
                         </div>
                     </div>
                     <div class="col-lg-5">
