--- a/who-we-are.html
+++ b/who-we-are.html
@@ -213,11 +213,10 @@ a.socialIcon:hover,
                         <div class="mb-9 mb-lg-0 text-center text-lg-start">
                             <p style="font-size: 100px; color: #ffff; font-weight: 900">Who we are</p>
                            
-                            <p class="lead fw-normal text-muted mb-5">We thrive providing excellence in service that industries rightfully deserve. We are one knowledge Consulting, LLC -
-                                specializing in degital creation and marketing, and platform development. our goal is to help small to medium entereprise to corporations get the attention they deserve. we believe that each business has different  needs when it comes to marketing services. Hence, we put 
-                                importance to the specificaation of service that each client needs. It's one of our strategies to success. Our methods are uniques and exciting with results that exceed expectations.
+                            <p class="lead fw-normal text-muted mb-5">We thrive on providing excellence in service that industries rightfully deserve. 
+                                We are One Knowledge Consulting, LLC - specializing in digital creation and marketing, and platform development. Our goal is to help small to medium enterprises to corporations get the attention they deserve. We believe that each business has different needs when it comes to marketing services. Hence, we put importance to the specification of service that each client needs. It's one of our key strategies to success. Our methods are unique and exciting with results that exceed expectations.                                
                                 </p>
-                                <p class="lead fw-normal text-muted mb-5">With us, you can always relax. Beacuse #It's ok</p>
+                                <p class="lead fw-normal text-muted mb-5">With us, you can always relax. Because #itsOK</p>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -238,11 +237,12 @@ a.socialIcon:hover,
                             <!-- Mashead text and app badges-->
                             <div class="mb-9 mb-lg-0 text-center text-lg-start">
                                 <p style="font-size: 70px; color: #efc649; font-weight: 900;">Our Mission</p>
-                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">To help small and medium-sized enterprises grow by enabling their presence in the digital space</p>
+                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">To help small and medium-sized enterprises grow by enabling their presence in the digital space.
+                                </p>
                             </div>
                             <div class="mb-9 mb-lg-0 text-center text-lg-start">
                                 <p style="font-size: 70px; color: #efc649; font-weight: 900;">Our Vission</p>
-                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">To be forfront in providing digital solution to small and medium-sized business and make a different in the local and global economy</p>
+                                <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">To be at the forefront in providing digital solutions to small and medium-sized businesses and make a difference in the local and global economy.</p>
                             </div>
                         </div>
                         <div class="col-lg-1">
@@ -265,7 +265,7 @@ a.socialIcon:hover,
                     <div class="row justify-content-center mb-3">
                         <div class="col-md-7 text-center">
                             <h1 class="display-5 mb-3">Meet Our Team</h1>
-                            <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <!-- <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p> -->
                         </div>
                     </div>
                     <div class="row">
@@ -287,7 +287,7 @@ a.socialIcon:hover,
                                     <div class="col-md-7 bg-white">
                                         <div class="p-4">
                                             <h6 class="mb-3">Noel Peralta Jr. (CEO)</h6>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                            <p >chief executive officer</p>
                                             <div class="col-md-12 text-center">
                                                 <ul class="social-network social-circle">
                                                     <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/fblogo.png" alt="..."/></a>
@@ -319,7 +319,7 @@ a.socialIcon:hover,
                                     <div class="col-md-7 bg-white">
                                         <div class="p-4">
                                             <h6 class="mb-3">Robert Clarita Jr. (CCO)</h6>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                            <p>Chief Content Officer</p>
                                             <div class="col-md-12 text-center">
                                                 <ul class="social-network social-circle">
                                                     <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/fblogo.png" alt="..."/></a>
@@ -354,7 +354,8 @@ a.socialIcon:hover,
                                     <div class="col-md-7 bg-white">
                                         <div class="p-4">
                                             <h6 class="mb-3">jhunnel Hernandez (3D)</h6>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                            <p> Platform Development
+                                            </p>
                                             <div class="col-md-12 text-center">
                                                 <ul class="social-network social-circle">
                                                     <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/fblogo.png" alt="..."/></a>
@@ -386,7 +387,7 @@ a.socialIcon:hover,
                                     <div class="col-md-7 bg-white">
                                         <div class="p-4">
                                             <h6 class="mb-3">Immanuel Mahusay (dev)</h6>
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                            <p>3D Animation and Graphics</p>
                                             <div class="col-md-12 text-center">
                                                 <ul class="social-network social-circle">
                                                     <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/fblogo.png" alt="..."/></a>
