--- a/sample-works.html
+++ b/sample-works.html
@@ -139,6 +139,38 @@
                 <hr class="">
             </div>
         </div>
+        <div class="container px-5">
+            <div class="row gx-5 align-items-center">
+                <div class="col-lg-5">
+                    <!-- Mashead text and app badges-->
+                    <div class="masthead-device-mockup text-center">
+
+                        <img src="assets/img/kr.png" alt="" srcset="" height="100">
+                    </div>
+                    <div class="mb-9 mb-lg-0 text-center text-lg-start">
+                    
+                        <p style="font-size:20px; color: #0c0c0c; font-weight: 900;"><span style="color: #d63384;">Kirsten Regalado </span> is a world renowned fashion designer and her collections are featured in prestigious world pageants and fashion shows. One Knowledge assisted Kirsten to professionalize and modernize her marketing arm by developing platforms that will help connect her works to her target audience both in local and international scenes. 
+                        </p>
+                        <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">Link to website: <a href="https://www.kirstenregalado.com/">https://www.kirstenregalado.com/</a></p>  
+                        <p style="font-size:20px; color: #0c0c0c; font-weight: 900;">Link(s) to social media site(s): <a href=""></a></p>                       
+                    </div>
+                   
+                </div>
+                <div class="col-lg-7">
+                    <div class="gallery">
+                        <div class="gallery-container">
+                          <img class="gallery-item gallery-item-1" src="assets/img/s.png" data-index="1">
+                          <img class="gallery-item gallery-item-2" src="assets/img/s1.png" data-index="1">
+                          <img class="gallery-item gallery-item-3" src="assets/img/s2.png" data-index="1">
+                          <img class="gallery-item gallery-item-4" src="assets/img/s.png" data-index="1">
+                          <img class="gallery-item gallery-item-5" src="assets/img/s1.png" data-index="1">
+                          <img class="gallery-item gallery-item-6" src="assets/img/s2.png" data-index="1">
+                        </div>
+                        <div class="gallery-controls"></div>
+                      </div>
+                </div>
+            </div>
+        </div>
         </section>
         <!-- Feedback Modal-->
         <div class="modal fade" id="feedbackModal" tabindex="-1" aria-labelledby="feedbackModalLabel" aria-hidden="true">
