--- a/who-we-are.html
+++ b/who-we-are.html
@@ -354,7 +354,7 @@ a.socialIcon:hover,
                                     <div class="col-md-7 bg-white">
                                         <div class="p-4">
                                             <h6 class="mb-3">jhunnel Hernandez (3D)</h6>
-                                            <p> Platform Development
+                                            <p> 3D Animation and Graphics
                                             </p>
                                             <div class="col-md-12 text-center">
                                                 <ul class="social-network social-circle">
@@ -387,7 +387,7 @@ a.socialIcon:hover,
                                     <div class="col-md-7 bg-white">
                                         <div class="p-4">
                                             <h6 class="mb-3">Immanuel Mahusay (dev)</h6>
-                                            <p>3D Animation and Graphics</p>
+                                            <p>Platform Development</p>
                                             <div class="col-md-12 text-center">
                                                 <ul class="social-network social-circle">
                                                     <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="assets/img/fblogo.png" alt="..."/></a>
