--- a/contact-us.html
+++ b/contact-us.html
@@ -67,7 +67,7 @@
                         <div class="mb-9 mb-lg-0 text-center text-lg-start">
                             <h1 style="font-size: 100px; color: #ffff;">Contact Us</h1>
                             <p class="lead fw-normal text-muted mb-5" style="font-weight: bold;"><strong> For inquiries and quotes, you can reach us throught info@https://www.oneknowledgeconsulting.com </strong></p>
-                            <p class="lead fw-normal text-muted mb-5" style="font-size: 40px; color: #ffff;"><b style="color: black;"> Phone:</b>  tel:+1 (321) 97723999772399</p>
+                            <p class="lead fw-normal text-muted mb-5" style="font-size: 40px; color: #ffff;"><span style="color: black;"> Phone:</span>  tel:+1 (321) 97723999772399</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
